fixed text overflow

--- a/css/zsinat.css
+++ b/css/zsinat.css
@@ -268,7 +268,7 @@ hr.small {
     min-height: 70vh;
   }
   .intro-header {
-    height: 400px;
+    height: 500px;
   }
 }
 @media only screen and (min-width: 1200px) {
